src/test/ui/where-clauses/where-for-self-2.stderr
error[E0308]: mismatched types
  --> $DIR/where-for-self-2.rs:21:5
   |
LL |     foo(&X); //~ ERROR E0308
   |     ^^^ lifetime mismatch
   |
   = note: expected type `Bar`
              found type `Bar`
   = note: lifetime RePlaceholder(Placeholder { universe: U1, name: BrNamed(crate0:DefIndex(1:10), 'a) })...
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
